[tool.poetry]
name = "buildkite"
version = "0.2.0"
description = ""
authors = ["Jeremiah Campbell"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.22.0"
diskcache = "^4.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
